turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:64: error: ';' expected but '=' found.
  rule:Array[Array[Array[Int]]] = Array( Array( Array(1,RIGHT,0), Array(1,RIGHT,1)),Array( Array(0,NOTURN,0), Array(0,NOTURN),1));
                                ^